# niutero

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  gui-button-audit.md  handoff.md  plan.md  rust-toolchain.toml
.cargo/: config.toml.example
crates/niutero-bib/: Cargo.toml
crates/niutero-bib/src/: item.rs  lib.rs  parse.rs  serialize.rs
crates/niutero-bib/tests/: proptest.rs  roundtrip.rs
crates/niutero-bib/tests/fixtures/: sample.bib
crates/niutero-cli/: Cargo.toml
crates/niutero-cli/src/: main.rs
crates/niutero-cli/tests/: ai.rs  cli.rs  config.rs  design_ops.rs  exchange.rs  mutate.rs  normalize.rs  organize.rs  pdf.rs  registry.rs  sync.rs  texscan.rs
crates/niutero-core/: Cargo.toml
crates/niutero-core/src/: citekey.rs  dedup.rs  entry.rs  filter.rs  lib.rs  library.rs  merge.rs  texdisplay.rs  texscan.rs
crates/niutero-core/tests/: merge_proptest.rs
crates/niutero-engine/: Cargo.toml
crates/niutero-engine/src/: ai.rs  connector.rs  lib.rs  pdf_ops.rs  sync_ops.rs  tags.rs
crates/niutero-gui/: Cargo.toml
crates/niutero-gui/src/: ai.rs  app.rs  dialog.rs  icons.rs  library.rs  main.rs  normalize.rs  overlays.rs  settings.rs  tex.rs  theme.rs  widgets.rs
crates/niutero-gui/src/app/: jobs.rs  library_ctl.rs  mod.rs  settings_ctl.rs  tags_ctl.rs
crates/niutero-gui/src/tags/: mod.rs  wizards.rs
crates/niutero-norm/: Cargo.toml
crates/niutero-norm/src/: lib.rs
crates/niutero-norm/tests/: venues.rs
crates/niutero-online/: Cargo.toml
crates/niutero-online/src/: lib.rs
crates/niutero-sync/: Cargo.toml
crates/niutero-sync/src/: lib.rs
crates/niutero-vault/: Cargo.toml
crates/niutero-vault/src/: lib.rs  registry.rs
design/: bib.md  browse.md  entries.md  export.md  import.md  init.md  normalize.md  organize.md  overview.md  sync.md  texscan.md  vault.md
design/ui/: README.md
design/ui/chats/: chat1.md
design/ui/project/: .design-canvas.state.json  Niutero Logo.html  Niutero.html  UI Design Spec.md
design/ui/project/app/: AITab.jsx  DirectionA.jsx  DirectionB.jsx  DirectionC.jsx  NormalizeTab.jsx  Overlays.jsx  SettingsTab.jsx  data.js  shared.jsx
extension/: README.md  background.js  gen-icons.py  manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js  scrape.js
extension/lib/: bibtex.js  capture.js  config.js  connector.js  extract.js
extension/test/: bibtex.test.mjs
