[workspace]
resolver = "2"
members = [
    "crates/niutero-core",
    "crates/niutero-bib",
    "crates/niutero-vault",
    "crates/niutero-engine",
    "crates/niutero-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# dev / test
proptest = "1"
insta = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
strip = true
