[package]
name = "niutero-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "niutero-cli"
path = "src/main.rs"

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
niutero-engine = { path = "../niutero-engine" }
clap = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
