[package]
name = "niutero-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
niutero-core = { path = "../niutero-core" }
niutero-bib = { path = "../niutero-bib" }
niutero-vault = { path = "../niutero-vault" }
niutero-sync = { path = "../niutero-sync" }
niutero-norm = { path = "../niutero-norm" }
niutero-online = { path = "../niutero-online" }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
