[package]
name = "niutero-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

# The desktop GUI (Phase 2): a pure-Rust egui/eframe app with the wgpu (GPU)
# backend, calling niutero-engine directly — no IPC, no shelling out. The binary
# is `niutero` (the CLI binary is `niutero-cli`). Cross-platform: nothing here is
# OS-specific; the Windows-on-ARM linker workaround lives in the gitignored
# .cargo/config.toml, so this crate stays portable.
[[bin]]
name = "niutero"
path = "src/main.rs"

[dependencies]
# Renderer: glow (OpenGL). egui is 2D, so OpenGL is plenty and far more portable
# than wgpu's native APIs. Critically, wgpu 27's DX12 path creates the device via
# the newer ID3D12DeviceFactory, which fails on this Windows-on-ARM hardware
# (MESA "dzn" → VK_ERROR_INITIALIZATION_FAILED); OpenGL renders fine here. glow
# uses GL on Win/Linux and Metal-via-ANGLE-style paths elsewhere — works across
# Windows/macOS/Linux.
eframe = { version = "0.33.3", default-features = false, features = ["glow", "default_fonts", "x11", "wayland"] }
niutero-engine = { path = "../niutero-engine" }
# eframe pinned via `cargo add` to the latest release compatible with the 1.89
# toolchain; wgpu backend for GPU rendering.
