[package]
name = "niutero-norm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
niutero-core = { path = "../niutero-core" }
serde = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
# Parse real `.bib` text in the integration tests (no cycle: bib doesn't use norm).
niutero-bib = { path = "../niutero-bib" }
