[package]
name = "niutero-online"
version.workspace = true
edition.workspace = true
license.workspace = true

# No runtime dependencies: online lookups shell out to the system `curl`, the
# same way niutero-sync shells out to `git`. niutero never links an HTTP/TLS
# stack, and these features stay strictly off the offline base path.
