[package]
name = "niutero-online"
version.workspace = true
edition.workspace = true
license.workspace = true

# HTTP is shelled out to the system `curl` (no HTTP/TLS stack linked), the same
# way niutero-sync shells out to `git`. `serde_json` is only for building the
# LLM request and parsing its JSON reply. These features stay strictly off the
# offline base path.

[dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
